css/style.css
/* The Universal Selector */
*, /* All elements*/
*::before, /* All ::before pseudo-elements */
*::after { /* All ::after pseudo-elements */
  /* height & width will now include border & padding by default
     but can be over-ridden as needed */
  box-sizing: inherit;
}

html {
  scroll-behavior: smooth;
}

body{
  --heading-color: #66bfbf;
  --bg-color: #e4f9f5;
  --light-dark-btn-content: "Dark Mode";
  --inverted-btn-text-color: #eaeaea;
  --light-dark-btn-bg: #1d1e2b;
  --text-color: #22232b;
  background-color: var(--bg-color);
  font-family: 'Merriweather', serif;
}

h1 {
  font-family: 'Sacramento', cursive;
  font-size: 5.625rem;
  margin: 50px auto 0 auto;
  color: var(--heading-color);
}

h2 {
  font-size: 2.5rem;
  color: var(--heading-color);
}

h2,
h3 {
  font-family: 'Montserrat', sans-serif;
  color: var(--heading-color);
  font-weight: bolder;
}

.body-text {
  color: var(--text-color);
}

.navbar {
  position: fixed;
  display: flex;
  height: 60px;
  background-color: #40514E;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  z-index: 2;
}  

.nav-list {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  padding-top: 15px;
}

.nav-list .list-item {
  display: inline-block;
  margin:  0 10px;
}

.navbar a {
  color: #eaeaea;
  text-decoration: none;
}
/* .navbar > ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  font-weight: bold;
  list-style: none;
}

.navbar a {
  display:  inline-block;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  margin: 0 10px;
  color: whitesmoke;
} */

.navbar-logo-ltdrk {
  display: flex;
  justify-content: center;
  justify-items: flex-start;
  align-items: center;
  flex-direction: row;
}

.page-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 50vh;
  padding-top: 60px;
}

.landing-h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.landing-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.about-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 20px 0;
}

.about-img {
  grid-column: 3/4;
  grid-row: 2/3;
  height: 200px;
  width: 200px;
}

.about-info {
  display: flex;
  justify-content: center;
  align-items: center;
  
}

.about-p {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  max-width: 80ch;
}

.skills-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.skills-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

.work-container {
  margin-top: 150px;
}

.work-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.card {
  margin: 10px;
  color: #22232b;
}

.card-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#card-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
	width: 100%;
}

.resume-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
}

.resume-div {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding-top: 250px;
}

.contact-me {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-btn {
  background: #11cdd4;
  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: 'Montserrat', sans-serif;
  color: #ffffff;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.contact-btn:hover {
  background: #30e3cb;
  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
  text-decoration: none;
  color: #ffffff;
}

.hidden-contact-btns {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px;
}

.hidden-btn {
  margin: 0 2px;
}

.copyright-btn {
  color: var(--text-color);
  text-decoration: none;
  background-color: var(--bg-color);
  border: none;
}

#light-dark-button {
  margin-left: 10px;
  border-radius: 5px;
  background-color: var(--light-dark-btn-bg);
}

#light-dark-button::after {
  border: none;
  color: var(--inverted-btn-text-color);
  content: var(--light-dark-btn-content);
}

body.dark {
  --bg-color: #22232b;
  --btn-text-color: #eaeaea;
  --inverted-btn-text-color: #eaeaea;
  --light-dark-btn-content: "Light Mode";
  --text-color: #eaeaea;
  background-color: var(--bg-color);
}

.dark-light-btn {
  margin-right: 50;
}

@media only screen and (max-width: 768px) {
  .navbar {
    height: 80px;
  }

  .logo-img {
    height: 30px;
    width: 30px;
  }

  .about-p {
    margin: 0 50px;
  }

  .work-container {
    margin-top: 100px;
  }

  h3 {
    margin: 0 30px;
    text-align: center;
  }

  .list-item {
    font-size: small;
  }

}

